--- a/src/Gateway.Blazor/Shared/MainLayout.razor
+++ b/src/Gateway.Blazor/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+<MudPopoverProvider />
 
 <MudLayout>
     <MudAppBar Elevation="1">
