--- a/src/Gateway.Blazor/Shared/SimpleLayout.razor
+++ b/src/Gateway.Blazor/Shared/SimpleLayout.razor
@@ -1,10 +1,11 @@
 @inherits LayoutComponentBase
 
 <MudThemeProvider />
+<MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<div>
+<MudContainer MaxWidth="MaxWidth.Large" Class="d-flex align-center justify-center" Style="min-height: 100vh;">
     @Body
-</div>
+</MudContainer>
 
