--- a/src/Gateway.Blazor/Pages/UserProfile.razor
+++ b/src/Gateway.Blazor/Pages/UserProfile.razor
@@ -1,5 +1,7 @@
 @page "/profile"
 @inject IAuthService AuthService
+@inject IApiService ApiService
+@inject IDialogService DialogService
 @inject NavigationManager Navigation
 @inject ISnackbar Snackbar
 
@@ -198,7 +200,7 @@
             CloseButton = true, 
             MaxWidth = MaxWidth.Small, 
             FullWidth = true,
-            DisableBackdropClick = true
+            BackdropClick = false
         };
         
         var dialog = await DialogService.ShowAsync<ChangePasswordDialog>("", options);
